Thu Apr 25 18:15:46 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: Don't use WIDE getaddrinfo by default.

Thu Apr 25 17:56:39 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: Remove obsolete options: ---with-ipv6-lib and
	  --with-ipv6-libdir.

Thu Apr 25 17:43:49 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: Implement
	  --{enable,disable}-close-fds-by-recvmsg-with-peek configure option
	  for cross-compiling.
	  Make --{enable,disable}-wide-getaddrinfo configure option
	  cross-compiling friendly.

Thu Apr 25 16:11:06 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_ext_int_to_encs, parse_mode_enc): bom-prefixed name is
	  not a real encoding name, just a fallback.  so the proper conversion
	  should take place even if if the internal encoding is equal to the
	  bom-prefixed name, unless actual encoding is equal to the internal
	  encoding.  [ruby-core:54563] [Bug #8323]

	* io.c (io_set_encoding_by_bom): reset extenal encoding if no BOM
	  found.  [ruby-core:54569]

Thu Apr 25 14:35:01 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_bn.c (ossl_bn_initialize): allow Fixnum and Bignum.
	  [ruby-core:53986] [Feature #8217]

Thu Apr 25 14:26:32 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb (URI.decode_www_form): follow current URL Standard.
	  It gets encoding argument to specify the character encoding.
	  It now allows loose percent encoded strings, but denies ;-separator.
	  [ruby-core:53475] [Bug #8103]

	* lib/uri/common.rb (URI.decode_www_form): follow current URL Standard.
	  It gets encoding argument to convert before percent encode.
	  Now UTF-16 strings aren't converted to UTF-8 before percent encode
	  by default.

Wed Apr 25 14:26:00 2013  Charlie Somerville  <charlie@charliesomerville.com>

	* benchmark/bm_hash_shift.rb: add benchmark for Hash#shift

	* hash.c (rb_hash_shift): use st_shift if hash is not being iterated to